objects/CA_Comm_Response__c.object
<CustomObject>
    <fields>
        <fullName>CA_Comm_Id__c</fullName>
        <formula>Question_Id__r.CA_Comm__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Comm Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Comm_Name__c</fullName>
        <formula>Question_Id__r.CA_Comm__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Comm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Comm_Page__c</fullName>
        <formula>&apos;[CA Owner:&apos; + CA_Owner__r.Name + &apos;][Contact: &apos; +  Contact__r.FirstName + &apos; &apos; + Contact__r.LastName + &apos;][URL: &apos; + &apos;https://c.na17.visual.force.com/apex/CACommunicationSurvey?CACommunicationId=&apos; + Question_Id__r.CA_Comm__r.Id + &apos;&amp;ContactId=&apos; + Contact__r.Id + &apos;]&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Comm URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CA Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CA Comm Responses</relationshipLabel>
        <relationshipName>CA_Comm_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CA Comm Responses</relationshipLabel>
        <relationshipName>CA_Comm_Responses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Type_Response__c</fullName>
        <label>Date Type Response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Question_Id__c</fullName>
        <label>Question Id</label>
        <referenceTo>CA_Comm_Question__c</referenceTo>
        <relationshipLabel>CA Comm Responses</relationshipLabel>
        <relationshipName>CA_Comm_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>Question_Id__r.Question_255_chars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Option_No__c</fullName>
        <label>Response Option No.</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>CA Comm Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R{00000}</displayFormat>
        <label>Resposne Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Comm Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>